force-app/main/default/objects/Contact__x/Contact__x.object-meta.xml
<CustomObject>
    <externalDataSource>My_Demo_Org</externalDataSource>
    <externalName>Contact</externalName>
    <label>Contact</label>
    <pluralLabel>Contacts</pluralLabel>
</CustomObject>