force-app/main/default/objects/Contact__x/fields/IndividualId__c.field-meta.xml
<CustomField>
    <fullName>IndividualId__c</fullName>
    <externalDeveloperName>IndividualId</externalDeveloperName>
    <label>Individual ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>