force-app/main/default/objects/Contact__x/fields/MailingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>MailingPostalCode__c</fullName>
    <externalDeveloperName>MailingPostalCode</externalDeveloperName>
    <label>Mailing Zip/Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>