force-app/main/default/objects/Contact__x/fields/meerapack_FacebookID_c__c.field-meta.xml
<CustomField>
    <fullName>meerapack_FacebookID_c__c</fullName>
    <externalDeveloperName>meerapack__FacebookID__c</externalDeveloperName>
    <label>FacebookID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>