force-app/main/default/objects/Contact__x/fields/meerapack_Languages_c__c.field-meta.xml
<CustomField>
    <fullName>meerapack_Languages_c__c</fullName>
    <externalDeveloperName>meerapack__Languages__c</externalDeveloperName>
    <label>Languages</label>
    <length>100</length>
    <type>Text</type>
</CustomField>