force-app/main/default/objects/Contact__x/fields/meerapack_Send_Email_c__c.field-meta.xml
<CustomField>
    <fullName>meerapack_Send_Email_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>meerapack__Send_Email__c</externalDeveloperName>
    <label>Send Email</label>
    <type>Checkbox</type>
</CustomField>