force-app/main/default/objects/Contact__x/fields/meerapack_test_c__c.field-meta.xml
<CustomField>
    <fullName>meerapack_test_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>meerapack__test__c</externalDeveloperName>
    <label>test</label>
    <type>Checkbox</type>
</CustomField>