force-app/main/default/objects/Contact__x/fields/OtherCountry__c.field-meta.xml
<CustomField>
    <fullName>OtherCountry__c</fullName>
    <externalDeveloperName>OtherCountry</externalDeveloperName>
    <label>Other Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>