force-app/main/default/objects/Contact__x/fields/ReportsToId__c.field-meta.xml
<CustomField>
    <fullName>ReportsToId__c</fullName>
    <externalDeveloperName>ReportsToId</externalDeveloperName>
    <label>Reports To ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>