force-app/main/default/objects/Contact__x/fields/zeitzone_MailingTimeZoneId_c__c.field-meta.xml
<CustomField>
    <fullName>zeitzone_MailingTimeZoneId_c__c</fullName>
    <externalDeveloperName>zeitzone__MailingTimeZoneId__c</externalDeveloperName>
    <label>MailingTimeZoneId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>